Style: Removed webkit background-attachment propery as this did not resolve issue on safari - parallax images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,7 +206,6 @@ h6 {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    -webkit-background-attachment: scroll;
     min-height: 400px;
 }
 
